working rabbitmq connection
